[tool.poetry]
name = "escape-from-42"
version = "0.1.0"
description = ""
authors = ["Warot Makarananda <warotm@gmail.com>"]
readme = "README.md"
packages = [{include = "escape_from_42"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
